@@ -72,7 +72,7 @@ TransactionDelay    50
 # The time to wait before initialization on startup in milliseconds.
 # Increase if mlogc is starting faster then termination when the
 # sensor is reloaded.
-StartupDelay    1000
+StartupDelay        5000
 
 # How often is the pending audit log entry data going to be written
 # to a file. The default is 15 seconds.
